Sticky on mobile was solved

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,6 +56,7 @@ p {
 /*->320px Navbar styles */
 nav {
   /*~ position */
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 1;
